--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -19,6 +19,9 @@ jobs:
         os:
           - ubuntu-latest
           - windows-latest
+          
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
